--- a/package.json
+++ b/package.json
@@ -2,16 +2,10 @@
   "name": "@useless/store",
   "version": "0.0.1",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
+    "build": "vite build"
   },
-  "dependencies": {
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@vitejs/plugin-react": "^1.0.0",
     "vite": "^2.6.4"
   }
 }
