--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "devDependencies": {
     "@types/node": "^17.0.21",
     "vite": "^2.6.4"
+  },
+  "dependencies": {
+    "consola": "^2.15.3"
   }
 }
