--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
     "noEmit": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noImplicitReturns": true
+    "noImplicitReturns": true,
+    "paths": {
+      "utils": ["./lib/utils"]
+    }
   }
 }
