🔧 config - remove alias - fix entry file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "paths": {
-      "utils": ["./lib/utils"]
+      // "utils": ["./lib/utils"]
     }
   }
 }
